--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,36 @@
-version: '3'
+version: '3.1'
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-15}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  php-fpm:
+    build:
+      context: ./app
+      dockerfile: docker/php-fpm/Dockerfile
+    volumes:
+      - ./app:/app:rw,cached
+    environment:
+      APP_ENV: dev
+      DB_NAME: db
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_USER: user
+      DB_PASS: pass
+      DB_DRIVER: pdo_mysql
+  nginx:
+    build:
+      context: ./app
+      dockerfile: docker/nginx/Dockerfile
+    environment:
+      PHP_HOST: php-fpm
+    volumes:
+      - ./app:/app:rw,cached
+    ports:
+      - 8000:80
+  db:
+    image: mariadb
+    restart: always
+    environment:
+      MYSQL_DATABASE: db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_RANDOM_ROOT_PASSWORD: '1'
