--- a/app/.env
+++ b/app/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=e91ec82d3387661dac616025d1710714
 ###< symfony/framework-bundle ###
 
